[gd_scene load_steps=28 format=3 uid="uid://b8wm5aids0hsd"]

[ext_resource type="Script" uid="uid://cf61wgupyo1jn" path="res://Assets/Scripts/player.gd" id="1_a6fu1"]
[ext_resource type="Texture2D" uid="uid://dtcx7mqa1mrtp" path="res://Assets/Sprites/Arrow.svg" id="3_uijvq"]
[ext_resource type="PackedScene" uid="uid://rnlbjyt78edc" path="res://Assets/Models/forklift.glb" id="4_47ure"]
[ext_resource type="Script" uid="uid://b1eh2dah8x45" path="res://Assets/Scripts/Player/normal_detection.gd" id="5_kct70"]
[ext_resource type="Script" uid="uid://b6ba0oys1onjb" path="res://Assets/Scripts/Player/ground_detection.gd" id="6_f2qr2"]
[ext_resource type="Script" uid="uid://bvg1d7jg2ynxq" path="res://Assets/Scripts/Player/grind_checker.gd" id="7_g7r1l"]
[ext_resource type="PackedScene" uid="uid://cr0h0q780l4sw" path="res://Assets/Prefabs/Player/Ui.tscn" id="8_t514h"]
[ext_resource type="Script" uid="uid://cciub86iwsl6u" path="res://Assets/Scripts/Player/StateMachine/state_machine.gd" id="9_jhk03"]
[ext_resource type="Script" uid="uid://drrpbr3low47p" path="res://Assets/Scripts/Player/StateMachine/jumping.gd" id="10_ty6qv"]
[ext_resource type="Script" uid="uid://cfv4cisxi8pcs" path="res://Assets/Scripts/Player/StateMachine/running.gd" id="11_qmb3c"]
[ext_resource type="Script" uid="uid://c3u6dvv8a7lnn" path="res://Assets/Scripts/Player/StateMachine/idle.gd" id="12_fhc2p"]
[ext_resource type="Script" uid="uid://b30gkcaddh03e" path="res://Assets/Scripts/Player/StateMachine/falling.gd" id="13_8j4km"]
[ext_resource type="Script" uid="uid://cyvw2df3lkh7y" path="res://Assets/Scripts/Player/StateMachine/grinding.gd" id="14_5k530"]
[ext_resource type="Script" uid="uid://cvkdjxuurbk00" path="res://Assets/Scripts/Player/StateMachine/failing.gd" id="14_47ure"]
[ext_resource type="Script" uid="uid://cfdq5awps8m5v" path="res://Assets/Scripts/Player/trick_manager.gd" id="14_uijvq"]
[ext_resource type="Script" uid="uid://cscc34jipl8uf" path="res://Assets/Scripts/Player/camera_manager.gd" id="18_kct70"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_x8mav"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ko2s7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a6fu1"]
radius = 0.0841897
height = 0.275166

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_47ure"]
radius = 0.372936
height = 1.39311

[sub_resource type="Animation" id="Animation_47ure"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine:danger_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Models/forklift:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StateMachine:state")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("StateMachine/Failing:damping_factor")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_g7r1l"]
resource_name = "back_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine:danger_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-6.28319, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.315, 0.09), Vector3(0, 0.395, -0.065), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t514h"]
resource_name = "failing"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Models/forklift:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.366667, 0.533333, 0.666667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.075, -0.11), Vector3(0, 0.075, -0.11), Vector3(0, 0.175, -0.11), Vector3(0, 0.175, -0.11), Vector3(0, 0.065, -0.11), Vector3(0, 0.175, -0.11), Vector3(0, 0.11, -0.11), Vector3(0, 0.115, -0.11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(0.31864, 1, 1, 0.170755, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 1.5708), Vector3(0, 1.5708, 1.81514), Vector3(0, 1.5708, 1.35263), Vector3(0, 1.5708, 1.81514), Vector3(0, 1.5708, 1.43117), Vector3(0, 1.5708, 1.7017)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.33333, 1.43333, 1.53333, 1.63333, 1.73333, 1.83333, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true, false, true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StateMachine:state")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StateMachine/Failing:damping_factor")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.7, 0.3, 0.1, 0.0]
}

[sub_resource type="Animation" id="Animation_4xvwh"]
resource_name = "front_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine:danger_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(6.28319, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.315, -0.085), Vector3(0, 0.395, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kct70"]
resource_name = "left_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine:danger_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -6.28319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.08, 0.315, 0), Vector3(0.045, 0.315, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uijvq"]
resource_name = "right_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine:danger_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Models/forklift:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Models/forklift:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1, 0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Models/forklift:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.08, 0.315, 0), Vector3(-0.045, 0.315, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kct70"]
_data = {
&"RESET": SubResource("Animation_47ure"),
&"back_flip": SubResource("Animation_g7r1l"),
&"failing": SubResource("Animation_t514h"),
&"front_flip": SubResource("Animation_4xvwh"),
&"left_flip": SubResource("Animation_kct70"),
&"right_flip": SubResource("Animation_uijvq")
}

[node name="Player" type="Node3D" node_paths=PackedStringArray("model", "ground_ray", "rigid_body", "ui")]
script = ExtResource("1_a6fu1")
model = NodePath("Models/forklift")
ground_ray = NodePath("RigidBody/GroundRays/GroundRayLB")
rigid_body = NodePath("RigidBody")
ui = NodePath("Ui")

[node name="Direction" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, 0.1, 0.5)
texture_filter = 0
texture = ExtResource("3_uijvq")

[node name="Debug" type="Node3D" parent="."]

[node name="Grind" type="Node" parent="Debug"]

[node name="LineGrind" type="MeshInstance3D" parent="Debug/Grind"]
mesh = SubResource("ImmediateMesh_x8mav")
skeleton = NodePath("../..")

[node name="RigidBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00135677, 0)
physics_material_override = SubResource("PhysicsMaterial_ko2s7")
lock_rotation = true
freeze_mode = 1

[node name="NormalDetection" type="RayCast3D" parent="RigidBody" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.170845, 0)
target_position = Vector3(0, -0.5, 0)
script = ExtResource("5_kct70")
player = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00645447, 0.141342, -0.011139)
shape = SubResource("CapsuleShape3D_a6fu1")

[node name="GroundRays" type="Node3D" parent="RigidBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0854731, 0)
script = ExtResource("6_f2qr2")

[node name="GroundRayLB" type="RayCast3D" parent="RigidBody/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0929285, 0.00384039, -0.121893)
target_position = Vector3(0, -0.1, 0)

[node name="GroundRayRB" type="RayCast3D" parent="RigidBody/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.093, 0.00390719, -0.122)
target_position = Vector3(0, -0.1, 0)

[node name="GroundRayRF" type="RayCast3D" parent="RigidBody/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964047, 0.00384039, 0.0787327)
target_position = Vector3(0, -0.1, 0)

[node name="GroundRayLF" type="RayCast3D" parent="RigidBody/GroundRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.096, 0.00390719, 0.079)
target_position = Vector3(0, -0.1, 0)

[node name="GrindChecker" type="Area3D" parent="RigidBody" node_paths=PackedStringArray("base_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125758, 0)
script = ExtResource("7_g7r1l")
base_player = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody/GrindChecker"]
transform = Transform3D(1, 0, 0, 0, 0.9992028, -0.03992252, 0, 0.03992252, 0.9992028, 0, -0.45174682, -0.0235922)
shape = SubResource("CapsuleShape3D_47ure")

[node name="Ui" parent="." instance=ExtResource("8_t514h")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("base_player", "ground_rays", "rigid_body", "idle_node", "jumping_node", "running_node", "falling_node", "grinding_node", "failing_node", "direction_arrow")]
script = ExtResource("9_jhk03")
base_player = NodePath("..")
ground_rays = NodePath("../RigidBody/GroundRays")
rigid_body = NodePath("../RigidBody")
idle_node = NodePath("Idle")
jumping_node = NodePath("Jumping")
running_node = NodePath("Running")
falling_node = NodePath("Falling")
grinding_node = NodePath("Grinding")
failing_node = NodePath("Failing")
direction_arrow = NodePath("../Direction")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("10_ty6qv")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("11_qmb3c")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("12_fhc2p")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("13_8j4km")

[node name="Grinding" type="Node" parent="StateMachine" node_paths=PackedStringArray("line_grind")]
script = ExtResource("14_5k530")
line_grind = NodePath("../../Debug/Grind/LineGrind")

[node name="Failing" type="Node" parent="StateMachine"]
script = ExtResource("14_47ure")

[node name="TrickManager" type="Node" parent="."]
script = ExtResource("14_uijvq")

[node name="Models" type="Node3D" parent="."]

[node name="Sparks" type="Node3D" parent="Models"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.028274, -0.118351)

[node name="LeftSpark" type="Sprite3D" parent="Models/Sparks"]
transform = Transform3D(0.012941, 0, 0.0482963, 0, 0.05, 0, -0.0482963, 0, 0.012941, 0.137486, 0.0887101, -0.162268)

[node name="RightSpark" type="Sprite3D" parent="Models/Sparks"]
transform = Transform3D(-0.012941, 0, 0.0482963, 0, 0.05, 0, -0.0482963, 0, -0.012941, -0.137678, 0.0887101, -0.162268)

[node name="forklift" parent="Models" instance=ExtResource("4_47ure")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="Cameras" type="Node3D" parent="." node_paths=PackedStringArray("followable", "far_back_camera", "close_back_camera", "grind_camera")]
script = ExtResource("18_kct70")
followable = NodePath("../RigidBody")
far_back_camera = NodePath("BackFarCamera")
close_back_camera = NodePath("BackCloseCamera")
grind_camera = NodePath("GrindCamera")

[node name="BackCloseCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.451356, -0.871913)
fov = 90.0

[node name="BackFarCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.797511, -1.26264)
current = true
fov = 90.0

[node name="GrindCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.962763, 0, -0.270348, 0.0744999, 0.961281, -0.265309, 0.25988, -0.27557, -0.925485, -0.164812, 0.167182, -0.303235)
fov = 121.204

[node name="AnimationManager" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kct70")
}

[node name="GrindAble" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, 0.1, 0.5)
texture_filter = 0
texture = ExtResource("3_uijvq")
